Rename Java transparency directory to verification (#4414)