@@ -14,7 +14,7 @@
 // limitations under the License.
 //
 
-package com.google.oak.transparency;
+package com.google.oak.verification;
 
 import java.nio.file.Files;
 import java.nio.file.Path;
@@ -26,38 +26,38 @@ import org.junit.runner.RunWith;
 import org.junit.runners.JUnit4;
 
 @RunWith(JUnit4.class)
-public class SignatureVerifierTest {
-  private static final String SIGNATURE_PATH =
-      "oak_remote_attestation_verification/testdata/endorsement.json.sig";
-  private static final String PUBLIC_KEY_PATH =
-      "oak_remote_attestation_verification/testdata/oak-development.pem";
-  private static final String CONTENT_PATH =
+public class LogEntryVerifierTest {
+  private static final String LOG_ENTRY_PATH =
+      "oak_remote_attestation_verification/testdata/logentry.json";
+  private static final String REKOR_PUBLIC_KEY_PATH =
+      "oak_remote_attestation_verification/testdata/rekor_public_key.pem";
+  private static final String ENDORSEMENT_PATH =
       "oak_remote_attestation_verification/testdata/endorsement.json";
 
-  private byte[] signatureBytes;
+  private RekorLogEntry logEntry;
   private byte[] publicKeyBytes;
-  private byte[] contentBytes;
+  private byte[] endorsementBytes;
 
   @Before
   public void setUp() throws Exception {
-    signatureBytes = Files.readAllBytes(Path.of(SIGNATURE_PATH));
-    publicKeyBytes = SignatureVerifier.convertPemToRaw(Files.readString(Path.of(PUBLIC_KEY_PATH)));
-    contentBytes = Files.readAllBytes(Path.of(CONTENT_PATH));
+    byte[] logEntryBytes = Files.readAllBytes(Path.of(LOG_ENTRY_PATH));
+    logEntry = RekorLogEntry.createFromJson(logEntryBytes);
+    publicKeyBytes =
+        SignatureVerifier.convertPemToRaw(Files.readString(Path.of(REKOR_PUBLIC_KEY_PATH)));
+    endorsementBytes = Files.readAllBytes(Path.of(ENDORSEMENT_PATH));
   }
 
   @Test
   public void testVerifySucceeds() {
-    Optional<Failure> failure =
-        SignatureVerifier.verify(signatureBytes, publicKeyBytes, contentBytes);
+    Optional<Failure> failure = LogEntryVerifier.verify(logEntry, publicKeyBytes, endorsementBytes);
 
     Assert.assertFalse(failure.isPresent());
   }
 
   @Test
-  public void testVerifyFailsWithManipulatedSignature() {
-    signatureBytes[signatureBytes.length / 2]++;
-    Optional<Failure> failure =
-        SignatureVerifier.verify(signatureBytes, publicKeyBytes, contentBytes);
+  public void testVerifyFailsWithManipulatedLogEntry() {
+    logEntry.logEntry.logIndex++;
+    Optional<Failure> failure = LogEntryVerifier.verify(logEntry, publicKeyBytes, endorsementBytes);
 
     Assert.assertTrue(failure.isPresent());
   }
@@ -65,17 +65,15 @@ public class SignatureVerifierTest {
   @Test
   public void testVerifyFailsWithManipulatedPublicKey() {
     publicKeyBytes[publicKeyBytes.length / 2]++;
-    Optional<Failure> failure =
-        SignatureVerifier.verify(signatureBytes, publicKeyBytes, contentBytes);
+    Optional<Failure> failure = LogEntryVerifier.verify(logEntry, publicKeyBytes, endorsementBytes);
 
     Assert.assertTrue(failure.isPresent());
   }
 
   @Test
-  public void testVerifyFailsWithWrongContent() {
-    contentBytes[contentBytes.length / 2]++;
-    Optional<Failure> failure =
-        SignatureVerifier.verify(signatureBytes, publicKeyBytes, contentBytes);
+  public void testVerifyFailsWithManipulatedEndorsement() {
+    endorsementBytes[endorsementBytes.length / 2]++;
+    Optional<Failure> failure = LogEntryVerifier.verify(logEntry, publicKeyBytes, endorsementBytes);
 
     Assert.assertTrue(failure.isPresent());
   }
